# fib-serv

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt  helpers.c  helpers.h  macros.h  structs.h
src/: main.c
